--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,21 @@
 
 menu:
   主页: /
-  随笔: /tags/随笔/
+  #随笔: /tags/随笔/
+  #所有文章: /archives
+  相册: /photos
+  关于我: https://wangdabaoqq.github.io/resume/
+  #Node: /node
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "https://github.com/wangdabaoqq"
+  #weibo: "#"
+  #rss: "#"
+  zhihu: "https://www.zhihu.com/people/qqq-97-92"
   #qq: "#"
   #weixin: "#"
-  #jianshu: "#"
+  jianshu: "http://www.jianshu.com/u/6e6cbcd5235d"
   #douban: "#"
   #segmentfault: "#"
   #bilibili: "#"
@@ -42,39 +46,29 @@ mathjax: false
 open_in_new: false
 
 # 打赏
-# 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
+# 请在需要打赏的文章的md文件头部，设置属性reward: true
+
+# 打赏基础设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
 reward_type: 2
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: 
+alipay:	https://qn.tyty.me/12.jpg
 # 微信二维码图片地址
 weixin: 
 
-# 目录
-# 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
-toc: 1
-# 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
-toc_hide_index: true
-# 目录为空时的提示
-toc_empty_wording: '目录，不存在的…'
-
-# 是否有快速回到顶部的按钮
-top: true
-
 # Miscellaneous
-baidu_analytics: ''
+baidu_analytics: '342be46a235a2deca7056d0af89b1269'
 google_analytics: ''
-favicon: /favicon.png
+favicon: https://www.easyicon.net/api/resizeApi.php?id=1204591&size=128
 
 #你的头像url
-avatar:
+avatar: "https://www.easyicon.net/api/resizeApi.php?id=1179072&size=128"
 
 #是否开启分享
-share_jia: true
+share_jia: false
 
-#评论：1、多说；2、网易云跟帖；3、畅言；4、Disqus；5、Gitment
-#不需要使用某项，直接设置值为false，或注释掉
+#评论：1、多说；2、网易云跟帖；3、畅言；4、Disqus 不需要使用某项，直接设置值为false，或注释掉
 #具体请参考wiki：https://github.com/litten/hexo-theme-yilia/wiki/
 
 #1、多说
@@ -84,18 +78,11 @@ duoshuo: false
 wangyiyun: false
 
 #3、畅言
-changyan_appid: false
-changyan_conf: false
+changyan_appid: 'cysRAijdU'
+changyan_conf: 'a12e7abf9cabb80207c0bff560cb623a'
 
 #4、Disqus 在hexo根目录的config里也有disqus_shortname字段，优先使用yilia的
 disqus: false
-
-#5、Gitment
-gitment_owner: false      #你的 GitHub ID
-gitment_repo: ''          #存储评论的 repo
-gitment_oauth:
-  client_id: ''           #client ID
-  client_secret: ''       #client secret
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
@@ -109,6 +96,21 @@ slider:
   # 是否默认展开tags板块
   showTags: false
 
+
+# Post wordcount display settings
+# Dependencies: https://github.com/willin/hexo-wordcount
+post_wordcount:
+  item_text: true
+  wordcount: true
+  min2read: true
+
+# Show number of visitors to each article.
+# You can visit https://leancloud.cn get AppID and AppKey.
+leancloud_visitors:
+  enable: true
+  app_id: S1Ld8n9vyQkccXR8xCcTntMQ-gzGzoHsz
+  app_key: AvU3NdixXuSuvWi65eATppIr
+
 # 智能菜单
 # 如不需要，将该对应项置为false
 # 比如
@@ -117,14 +119,13 @@ slider:
 smart_menu:
   innerArchive: '所有文章'
   friends: '友链'
-  aboutme: '关于我'
+  #aboutme: '关于我'
 
 friends:
-  友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
+  yilia作者: http://litten.me/
+  JailBreak的博客: http://vgee.cn/
+  刘卓旻的博客: http://trumi.cn/
+  邱俊的博客: https://qiujun.me/
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
