--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "fetch": "^1.1.0",
     "fetch-ie8": "^1.4.3",
     "file-loader": "^0.9.0",
+    "hexo-wordcount": "^3.0.2",
     "js-cookie": "^2.1.3",
     "photoswipe": "^4.1.1"
   },
