--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ subnav:
   #segmentfault: "#"
   #bilibili: "#"
   #acfun: "#"
-  #mail: "mailto:litten225@qq.com"
+  mail: "mailto:wangdabao221@gmail.com"
   #facebook: "#"
   #google: "#"
   #twitter: "#"
@@ -37,7 +37,7 @@ root: /
 # Content
 
 # 文章太长，截断按钮文字
-excerpt_link: more
+#excerpt_link: more
 # 文章卡片右下角常驻链接，不需要请设置为false
 show_all_link: '展开全文'
 # 数学公式
@@ -60,10 +60,21 @@ weixin:
 # Miscellaneous
 baidu_analytics: '342be46a235a2deca7056d0af89b1269'
 google_analytics: ''
-favicon: https://www.easyicon.net/api/resizeApi.php?id=1204591&size=128
+favicon: https://qn.tyty.me/icon.png
+
+# 目录
+# 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
+toc: 1
+# 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
+toc_hide_index: true
+# 目录为空时的提示
+toc_empty_wording: '目录，不存在的…'
+
+# 是否有快速回到顶部的按钮
+top: true
 
 #你的头像url
-avatar: "https://www.easyicon.net/api/resizeApi.php?id=1179072&size=128"
+avatar: https://qn.tyty.me/avatar.png
 
 #是否开启分享
 share_jia: false
@@ -126,6 +137,6 @@ friends:
   JailBreak的博客: http://vgee.cn/
   刘卓旻的博客: http://trumi.cn/
   邱俊的博客: https://qiujun.me/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
+  funnycoderstar: http://wangyaxing.top/
+  cherryblog: http://cherryblog.site/
 
