--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ weixin:
 # Miscellaneous
 baidu_analytics: '342be46a235a2deca7056d0af89b1269'
 google_analytics: ''
-favicon: ./assets/img/avatar.png
+favicon: https://qn.tyty.me/icon.png
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -74,7 +74,7 @@ toc_empty_wording: '目录，不存在的…'
 top: true
 
 #你的头像url
-avatar: https://qn.tyty.me/avatar.png
+avatar: ./assets/img/avatar.png
 
 #是否开启分享
 share_jia: false
