--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ subnav:
   zhihu: "https://www.zhihu.com/people/qqq-97-92"
   #qq: "#"
   #weixin: "#"
-  jianshu: "http://www.jianshu.com/u/6e6cbcd5235d"
+  #jianshu: "http://www.jianshu.com/u/6e6cbcd5235d"
   #douban: "#"
   #segmentfault: "#"
   #bilibili: "#"
   #acfun: "#"
   mail: "mailto:wangdabao221@gmail.com"
   #facebook: "#"
-  #google: "#"
+  google: "https://www.google.com/"
   #twitter: "#"
   #linkedin: "#"
 
@@ -32,7 +32,7 @@ rss: /atom.xml
 # 是否需要修改 root 路径
 # 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
 # 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: /
+root: /hexo-back-up
 
 # Content
 
@@ -49,7 +49,7 @@ open_in_new: false
 # 请在需要打赏的文章的md文件头部，设置属性reward: true
 
 # 打赏基础设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 2
+reward_type: 0
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
