--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ rss: /atom.xml
 # 是否需要修改 root 路径
 # 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
 # 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: /hexo-back-up
+root: /me
 
 # Content
 
@@ -53,14 +53,14 @@ reward_type: 0
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay:	https://wangdabaoqq.github.io/hexo-back-up/assets/img/12.jpg
+alipay:	https://wangdabaoqq.github.io/me/assets/img/12.jpg
 # 微信二维码图片地址
 weixin: 
 
 # Miscellaneous
 baidu_analytics: '342be46a235a2deca7056d0af89b1269'
 google_analytics: ''
-favicon: https://wangdabaoqq.github.io/hexo-back-up/assets/img/icon.png
+favicon: https://wangdabaoqq.github.io/me/assets/img/icon.png
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -74,7 +74,7 @@ toc_empty_wording: '目录，不存在的…'
 top: true
 
 #你的头像url
-avatar: https://wangdabaoqq.github.io/hexo-back-up/assets/img/avatar.png
+avatar: https://wangdabaoqq.github.io/me/assets/img/avatar.png
 
 #是否开启分享
 share_jia: false
